5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1791_1613.log
== TEST (2019-05-29 14:18:46) 
-- CODE:
t = array(eval(input())).upper
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    t = array(eval(input())).upper
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:18:52) 
-- CODE:
t = array(eval(input())).upper

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    t = array(eval(input())).upper
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:33:07) 
-- CODE:
from numpy import*
t = array(eval(input())).upper
m= int(input())  #duração da atividade

i = 0
l = 0

while(m > i):
	if(t[i] == "ALONGAMENTO"):
		l = m[i] * 3
		i = i +1
	elif(t[i]== "CORRIDA"):
		l= m[i] * 10.3
		i= i+1
	elif(t[i]=="DANCA"):
		l= m [i] * 6.7
		i=i+1
	elif(t[i]=="ESCADA"):
		l= m [i] * 9.7
		i=i+1
	elif(t[i]=="HIDROGINASTICA"):
		l= m [i] * 5
		i=i+1

print(round(i,2)
-- ERROR:
File "XXXX", line 26
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:41:33) 
-- CODE:
from numpy import*
t = array(eval(input())).upper
m= int(input())  #duração da atividade

i = 0
l = 0

while(m > i):
	if(t[i] == "ALONGAMENTO"):
		l = m[i] * 3
		i = i +1
	elif(t[i]== "CORRIDA"):
		l= m[i] * 10.3
		i= i+1
	elif(t[i]=="DANCA"):
		l= m [i] * 6.7
		i=i+1
	elif(t[i]=="ESCADA"):
		l= m [i] * 9.7
		i=i+1
	elif(t[i]=="HIDROGINASTICA"):
		l= m [i] * 5
		i=i+1
print(round(i,2)
-- ERROR:
File "XXXX", line 25
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 14:41:42) 
-- CODE:
from numpy import*
t = array(eval(input())).upper
m= int(input())  #duração da atividade

i = 0
l = 0

while(m > i):
	if(t[i] == "ALONGAMENTO"):
		l = m[i] * 3
		i = i +1
	elif(t[i]== "CORRIDA"):
		l= m[i] * 10.3
		i= i+1
	elif(t[i]=="DANCA"):
		l= m [i] * 6.7
		i=i+1
	elif(t[i]=="ESCADA"):
		l= m [i] * 9.7
		i=i+1
	elif(t[i]=="HIDROGINASTICA"):
		l= m [i] * 5
		i=i+1

		print(round(i,2)
-- EXECUTION TIME:
0.12693
-- ERROR:
  File "/home/codebench/codes/1791/1613/main.py", line 26
    
                      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 14:41:43) 
-- CODE:
from numpy import*
t = array(eval(input())).upper
m= int(input())  #duração da atividade

i = 0
l = 0

while(m > i):
	if(t[i] == "ALONGAMENTO"):
		l = m[i] * 3
		i = i +1
	elif(t[i]== "CORRIDA"):
		l= m[i] * 10.3
		i= i+1
	elif(t[i]=="DANCA"):
		l= m [i] * 6.7
		i=i+1
	elif(t[i]=="ESCADA"):
		l= m [i] * 9.7
		i=i+1
	elif(t[i]=="HIDROGINASTICA"):
		l= m [i] * 5
		i=i+1

		print(round(i,2)
-- ERROR:
File "XXXX", line 26
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-03 13:11:49) 
-- CODE:
from numpy import*
t = array(eval(input())).upper
m= int(input())  #duração da atividade

i = 0
l = 0

while(m > i):
	if(t[i] == "ALONGAMENTO"):
		l = m[i] * 3
		i = i +1
	elif(t[i]== "CORRIDA"):
		l= m[i] * 10.3
		i= i+1
	elif(t[i]=="DANCA"):
		l= m [i] * 6.7
		i=i+1
	elif(t[i]=="ESCADA"):
		l= m [i] * 9.7
		i=i+1
	elif(t[i]=="HIDROGINASTICA"):
		l= m [i] * 5
		i=i+1

		print(round(i,2)
-- ERROR:
File "XXXX", line 26
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
